> Fixed crate image, crashes were happening when it was too far from the wall
Updated screenshot for forces-and-motion, see #3040
# 2.01.00 (53821) Jul 6, 2011
7/6/11 > added new translation credits features
# 2.00.06 (53457) Jun 24, 2011
Removed usage of App trait, see #2877
# 2.00.05 (53432) Jun 23, 2011
Switched to use HTMLImageButtonNode instead of ButtonNode
Switched to use App instead of main
Updated to use piccolo's version of SwingLayoutNode, see #2375
# 2.00.04 (48705) Feb 7, 2011
Fixed: improved fix for hiding the horizontal line before the total force arrow is shown
# 2.00.03 (48703) Feb 6, 2011
Fixed: when you have the total force arrow option checked, and you start to apply force to the object to move them, right before the object moves there is a little black line that appears above the object right before the green total force arrow appears
# 2.00.02 (48701) Feb 6, 2011
Proposed changes for usage in Dallas:
-Renamed "sum of forces" to "total force"
-Increased arrow thickness
-Made arrow thickness independent of arrow magnitude
# 2.00.01 (48699) Feb 6, 2011
Proposed changes for usage in Dallas:
- Remove gravity and normal force vectors
- Spell out "Applied Force", "Friction Force", and "Total Force" for the F_f, F_a, and F_sum vector labels
- Make the force vectors wider, as in the old Forces in 1D
# 2.00.00 (45090) Oct 16, 2010
Internationalized the help button
# 1.03.83 (45046) Oct 13, 2010
Fixed: radio buttons (such as "brick") toggle on and off when pressing the same button repeatedly
# 1.03.82 (44954) Oct 11, 2010
Fixed: Keypresses broken in sliders in the control panel, see #2540
Fixed: Can get a false "stuck" condition by pressing the object to the left against the truck continuously. Object should only be stuck if robot cannot overcome friction force (only applies to refrigerator).
Fixed: "Reset All" does not remove the small play/pause button to the left of graph.
Removed the units label from the right hand side of the chart